--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -673,3 +673,6 @@ CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_FORCE_FAST_CHARGE=y
 
+# Faux sound
+CONFIG_HAS_MACH_MEMUTILS=y		
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
