--- a/arch/arm/boot/dts/msm-pm8941.dtsi
+++ b/arch/arm/boot/dts/msm-pm8941.dtsi
@@ -206,10 +206,10 @@
 		qcom,ibatmax-ma-x4 = <2000>;
 		qcom,ibatmax-ma-x5 = <2000>;
 		qcom,ibatterm-ma = <100>;
-		qcom,ibatsafe-ma-x3 = <1600>;
+		qcom,ibatsafe-ma-x3 = <2100>;
 		qcom,ibatsafe-ma-x4 = <2100>;
 		qcom,ibatsafe-ma-x5 = <2100>;
-		qcom,thermal-mitigation-x3 = <1500 700 600 325>;
+		qcom,thermal-mitigation-x3 = <2000 1850 1650 1500 1000 600 400>;
 		qcom,thermal-mitigation-x4 = <2000 1850 1650 1500 1000 600 400>;
 		qcom,thermal-mitigation-x5 = <2000 1850 1650 1500 1000 600 400>;
 		qcom,cool-bat-decidegc = <20>;
