--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="_XenonHD-cancro"
+CONFIG_LOCALVERSION="_GasL-cancro"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_LZMA=y
 CONFIG_SYSVIPC=y
@@ -347,6 +347,8 @@ CONFIG_TOUCHSCREEN_ATMEL_640T=y
 CONFIG_TOUCHSCREEN_ST_FTS=y
 CONFIG_TOUCHSCREEN_CYTTSP_BUTTON=y
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
+CONFIG_TOUCHSCREEN_SWEEP2WAKE=y
+CONFIG_TOUCHSCREEN_DOUBLETAP2WAKE=y
 CONFIG_SECURE_TOUCH=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_HBTP_INPUT=y
@@ -673,6 +675,3 @@ CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_FORCE_FAST_CHARGE=y
 
-# Faux sound
-CONFIG_HAS_MACH_MEMUTILS=y		
-CONFIG_SOUND_CONTROL_HAX_3_GPL=y
