--- a/arch/arm/boot/dts/msm8974pro.dtsi
+++ b/arch/arm/boot/dts/msm8974pro.dtsi
@@ -54,6 +54,7 @@
 	qcom,clock-krait@f9016000 {
 		qcom,speed1-pvs0-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   74 >,
 			<  345600000  775000   85 >,
 			<  422400000  775000  104 >,
@@ -85,6 +86,7 @@
 
 		qcom,speed1-pvs1-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   74 >,
 			<  345600000  775000   85 >,
 			<  422400000  775000  104 >,
@@ -116,6 +118,7 @@
 
 		qcom,speed1-pvs2-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   74 >,
 			<  345600000  750000   85 >,
 			<  422400000  750000  104 >,
@@ -147,6 +150,7 @@
 
 		qcom,speed1-pvs3-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   74 >,
 			<  345600000  750000   85 >,
 			<  422400000  750000  104 >,
@@ -178,6 +182,7 @@
 
 		qcom,speed1-pvs4-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   74 >,
 			<  345600000  750000   85 >,
 			<  422400000  750000  104 >,
@@ -209,6 +214,7 @@
 
 		qcom,speed1-pvs5-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  725000   74 >,
 			<  345600000  725000   85 >,
 			<  422400000  725000  104 >,
@@ -240,6 +246,7 @@
 
 		qcom,speed1-pvs6-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  725000   74 >,
 			<  345600000  725000   85 >,
 			<  422400000  725000  104 >,
@@ -271,6 +278,7 @@
 
 		qcom,speed3-pvs0-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -301,10 +309,12 @@
 			< 2265600000 1065000  700 >,
 			< 2342400000 1080000  734 >,
 			< 2419200000 1095000  769 >,
-			< 2457600000 1100000  785 >;
+			< 2457600000 1050000  785 >,
+			< 2649600000 1100000  808 >;
 
 		qcom,speed3-pvs1-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -339,6 +349,7 @@
 
 		qcom,speed3-pvs2-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -373,6 +384,7 @@
 
 		qcom,speed3-pvs3-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -407,6 +419,7 @@
 
 		qcom,speed3-pvs4-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -441,6 +454,7 @@
 
 		qcom,speed3-pvs5-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   76 >,
 			<  345600000  750000   87 >,
 			<  422400000  750000  106 >,
@@ -475,6 +489,7 @@
 
 		qcom,speed3-pvs6-bin-v0 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   76 >,
 			<  345600000  750000   87 >,
 			<  422400000  750000  106 >,
@@ -509,6 +524,7 @@
 
 		qcom,speed1-pvs0-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  810000   87 >,
 			<  422400000  820000  108 >,
@@ -540,6 +556,7 @@
 
 		qcom,speed1-pvs1-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  810000  108 >,
@@ -571,6 +588,7 @@
 
 		qcom,speed1-pvs2-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  108 >,
@@ -602,6 +620,7 @@
 
 		qcom,speed1-pvs3-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  108 >,
@@ -633,6 +652,7 @@
 
 		qcom,speed1-pvs4-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  108 >,
@@ -664,6 +684,7 @@
 
 		qcom,speed1-pvs5-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  108 >,
@@ -695,6 +716,7 @@
 
 		qcom,speed1-pvs6-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  108 >,
@@ -726,6 +748,7 @@
 
 		qcom,speed1-pvs7-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  108 >,
@@ -757,6 +780,7 @@
 
 		qcom,speed1-pvs8-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  108 >,
@@ -788,6 +812,7 @@
 
 		qcom,speed1-pvs9-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  108 >,
@@ -819,6 +844,7 @@
 
 		qcom,speed1-pvs10-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  108 >,
@@ -850,6 +876,7 @@
 
 		qcom,speed1-pvs11-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  108 >,
@@ -881,6 +908,7 @@
 
 		qcom,speed1-pvs12-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  108 >,
@@ -912,6 +940,7 @@
 
 		qcom,speed1-pvs13-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  108 >,
@@ -943,6 +972,7 @@
 
 		qcom,speed1-pvs14-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   76 >,
 			<  345600000  750000   87 >,
 			<  422400000  750000  108 >,
@@ -974,6 +1004,7 @@
 
 		qcom,speed1-pvs15-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   76 >,
 			<  345600000  750000   87 >,
 			<  422400000  750000  108 >,
@@ -1005,6 +1036,7 @@
 
 		qcom,speed3-pvs0-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1039,6 +1071,7 @@
 
 		qcom,speed3-pvs1-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1073,6 +1106,7 @@
 
 		qcom,speed3-pvs2-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1103,10 +1137,12 @@
 			< 2265600000 1065000  716 >,
 			< 2342400000 1080000  751 >,
 			< 2419200000 1095000  786 >,
-			< 2457600000 1100000  802 >;
+			< 2457600000 1100000  802 >,
+			< 2649600000 1100000  808 >;
 
 		qcom,speed3-pvs3-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1141,6 +1177,8 @@
 
 		qcom,speed3-pvs4-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1175,6 +1213,7 @@
 
 		qcom,speed3-pvs5-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  800000   76 >,
 			<  345600000  800000   87 >,
 			<  422400000  800000  106 >,
@@ -1209,6 +1248,7 @@
 
 		qcom,speed3-pvs6-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1243,6 +1283,7 @@
 
 		qcom,speed3-pvs7-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1277,6 +1318,7 @@
 
 		qcom,speed3-pvs8-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1311,6 +1353,7 @@
 
 		qcom,speed3-pvs9-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1345,6 +1388,7 @@
 
 		qcom,speed3-pvs10-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1379,6 +1423,7 @@
 
 		qcom,speed3-pvs11-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1413,6 +1458,7 @@
 
 		qcom,speed3-pvs12-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1447,6 +1493,7 @@
 
 		qcom,speed3-pvs13-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  775000   76 >,
 			<  345600000  775000   87 >,
 			<  422400000  775000  106 >,
@@ -1481,6 +1528,7 @@
 
 		qcom,speed3-pvs14-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   76 >,
 			<  345600000  750000   87 >,
 			<  422400000  750000  106 >,
@@ -1515,6 +1563,7 @@
 
 		qcom,speed3-pvs15-bin-v1 =
 			<          0       0    0 >,
+			<  268800000  730000   68 >,
 			<  300000000  750000   76 >,
 			<  345600000  750000   87 >,
 			<  422400000  750000  106 >,
@@ -1571,7 +1620,7 @@
 	qcom,chipid = <0x03030002>;
 	qcom,msm-bus,num-cases = <15>;
 	qcom,bus-control;
-	qcom,initial-pwrlevel = <3>;
+	qcom,initial-pwrlevel = <4>;
 
 	/* Updated bus bandwidth requirements */
 	qcom,msm-bus,vectors-KBps =
@@ -1614,41 +1663,55 @@
 
                qcom,gpu-pwrlevel@0 {
                        reg = <0>;
-                       qcom,gpu-freq = <578000000>;
+                       qcom,gpu-freq = <657000000>;
                        qcom,bus-freq = <14>;
                        qcom,io-fraction = <101>;
                };
 
                qcom,gpu-pwrlevel@1 {
                        reg = <1>;
-                       qcom,gpu-freq = <462400000>;
-                       qcom,bus-freq = <11>;
+                       qcom,gpu-freq = <578000000>;
+                       qcom,bus-freq = <14>;
                        qcom,io-fraction = <101>;
                };
 
                qcom,gpu-pwrlevel@2 {
                        reg = <2>;
-                       qcom,gpu-freq = <389000000>;
-                       qcom,bus-freq = <8>;
+                       qcom,gpu-freq = <462400000>;
+                       qcom,bus-freq = <11>;
                        qcom,io-fraction = <101>;
                };
 
                qcom,gpu-pwrlevel@3 {
                        reg = <3>;
-                       qcom,gpu-freq = <330000000>;
-                       qcom,bus-freq = <5>;
+                       qcom,gpu-freq = <389000000>;
+                       qcom,bus-freq = <8>;
                        qcom,io-fraction = <101>;
                };
 
                qcom,gpu-pwrlevel@4 {
                        reg = <4>;
-                       qcom,gpu-freq = <200000000>;
-                       qcom,bus-freq = <2>;
+                       qcom,gpu-freq = <330000000>;
+                       qcom,bus-freq = <5>;
                        qcom,io-fraction = <101>;
                };
 
                qcom,gpu-pwrlevel@5 {
                        reg = <5>;
+                       qcom,gpu-freq = <200000000>;
+                       qcom,bus-freq = <2>;
+                       qcom,io-fraction = <101>;
+               };
+
+              qcom,gpu-pwrlevel@6 {
+                       reg = <6>;
+                       qcom,gpu-freq = <100000000>;
+                       qcom,bus-freq = <2>;
+                       qcom,io-fraction = <101>;
+               };
+
+               qcom,gpu-pwrlevel@7 {
+                       reg = <7>;
                        qcom,gpu-freq = <27000000>;
                        qcom,bus-freq = <0>;
                        qcom,io-fraction = <101>;
