--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ modules.builtin
 *.lzma
 *.xz
 *.lzo
+*.img
 *.patch
 *.gcno
 
@@ -84,3 +85,17 @@ GTAGS
 *.orig
 *~
 \#*#
+#
+# Leavings from module signing
+#
+extra_certificates
+signing_key.priv
+signing_key.x509
+x509.genkey
+ 
+# Kconfig presets
+ all.config
+*.zip
+/anykernel/zImage
+/anykernel/dtb
+/anykernel/BlackFox*
