--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -116,6 +116,9 @@ CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 CONFIG_CPU_FREQ_GOV_PEGASUSQ=y
+CONFIG_CPU_FREQ_GOV_DARKNESS=y
+CONFIG_CPU_FREQ_GOV_IMPULSE=y
+CONFIG_CPU_FREQ_GOV_NIGHTMARE=y
 CONFIG_CPU_BOOST=y
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
