--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -685,7 +685,7 @@ CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 
-#BlackFox
+#Foxy
 CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_SWAP=y
@@ -699,4 +699,6 @@ CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_HOTPLUG_CPU=y
+CONFIG_INTELLI_PLUG=y
 
