--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -690,7 +690,7 @@ CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 
-#BlackFox
+#Foxy
 CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_SWAP=y
@@ -700,3 +700,5 @@ CONFIG_ZRAM=y
 CONFIG_QCACHE=y
 CONFIG_ZSMALLOC=y
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_HOTPLUG_CPU=y
+CONFIG_INTELLI_PLUG=y
