--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -698,4 +698,6 @@ CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_FORCE_FAST_CHARGE=y
+CONFIG_HOTPLUG_CPU=y
+CONFIG_INTELLI_PLUG=y
 
