--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -683,7 +683,8 @@ CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_XCBC=y
 CONFIG_CRYPTO_SHA1_ARM_NEON=y
 CONFIG_CRYPTO_SHA512_ARM_NEON=y
-CONFIG_CRYPTO_AES_ARM_BS=y
+CONarch/arm/configs/cyanogen_cancro_defconfig
+FIG_CRYPTO_AES_ARM_BS=y
 CONFIG_CRYPTO_TWOFISH=y
 # CONFIG_CRYPTO_ANSI_CPRNG is not set
 CONFIG_CRYPTO_DEV_QCRYPTO=y
@@ -702,3 +703,4 @@ CONFIG_ZSMALLOC=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
