--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -716,3 +716,6 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_TCP_CONG_ADVANCED=y
+CONFIG_TCP_CONG_WESTWOOD=y
+CONFIG_DEFAULT_TCP_CONG="westwood"
