--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -634,7 +634,6 @@ CONFIG_MSM_IOMMU_V1=y
 CONFIG_MSM_IOMMU_PMON=y
 CONFIG_IOMMU_PGTABLES_L2=y
 CONFIG_MSM_IOMMU_VBIF_CHECK=y
-# CONFIG_ADRENO_IDLER is not set
 CONFIG_BIF=y
 CONFIG_BIF_QPNP=y
 CONFIG_IIO=y
@@ -711,4 +710,5 @@ CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
+CONFIG_ADRENO_IDLER=y
 
