defconfig:enable adreno idler

--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -639,7 +639,6 @@ CONFIG_MSM_IOMMU_V1=y
 CONFIG_MSM_IOMMU_PMON=y
 CONFIG_IOMMU_PGTABLES_L2=y
 CONFIG_MSM_IOMMU_VBIF_CHECK=y
-# CONFIG_ADRENO_IDLER is not set
 CONFIG_BIF=y
 CONFIG_BIF_QPNP=y
 CONFIG_IIO=y
@@ -719,3 +718,4 @@ CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
+CONFIG_ADRENO_IDLER=y
