--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
-CONFIG_LOCALVERSION="_Skynet™"
+CONFIG_LOCALVERSION="_zdx™"
 CONFIG_KERNEL_LZMA=y
 CONFIG_SYSVIPC=y
 CONFIG_AUDIT=y
