--- a/arch/arm/boot/dts/msm8974.dtsi
+++ b/arch/arm/boot/dts/msm8974.dtsi
@@ -88,6 +88,13 @@
 			label = "qseecom_mem";
 		};
 
+ 		audio_mem: audio_region {
+ 			linux,contiguous-region;
+			linux,reserve-region;
+ 			reg = <0 0x614000>;
+			label = "audio_mem";
+ 	       };
+
 	};
 
 	soc: soc { };
