--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -713,6 +713,7 @@ CONFIG_ZSMALLOC=y
 CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
+CONFIG_MSM_HOTPLUG=y
 CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_TCP_CONG_ADVANCED=y
