--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -711,4 +711,5 @@ CONFIG_FORCE_FAST_CHARGE=y
 CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ADRENO_IDLER=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 
