Faux sound by faux123

--- a/arch/arm/configs/cyanogen_cancro_defconfig
+++ b/arch/arm/configs/cyanogen_cancro_defconfig
@@ -702,7 +702,7 @@ CONFIG_CRYPTO_DEV_QCRYPTO=y
 CONFIG_CRYPTO_DEV_QCE=y
 CONFIG_CRYPTO_DEV_QCEDEV=y
 
-#Foxy
+#Apollo
 CONFIG_ALUCARD_HOTPLUG=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_SWAP=y
@@ -721,3 +721,4 @@ CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_DEFAULT_TCP_CONG="westwood"
 CONFIG_ADRENO_IDLER=y
+CONFIG_SOUND_CONTROL_HAX_3_GPL=y
