Optimized ARM RWSEM algorithm
RWSEM implementation for ARM using atomic functions.
Heavily based on arch/sh/include/asm/rwsem.h

Signed-off-by: Alex Naidis <alex.naidis@linux.com>

--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -720,4 +720,5 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 
