power: make sync on suspend optional
On embedded devices with built-in batteries, it is not so
important to sync the file systems before suspend.  The chance
of losing power during suspend are no greater than they are
when the system is awake.  The sync operations can greatly
increase suspend latency when the system has accrued many dirty
pages and/or the target storage devices are not particularly
fast.

This commit adds a kernel config option to allow file system
sync in the suspend and earlysuspend paths to be disabled.  It is
enabled by default.  It also exposes two command line options to
control this feature: suspendsync and earlysuspendsync.

Change-Id: I97ff1b9d0431c9b6aee4dbd00e40d559d3ee1ec8
Signed-off-by: Russ Knize <Russ.Knize@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/614512
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -723,3 +723,4 @@ CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA256_ARM=y
+PM_SYNC_BEFORE_SUSPEND=y
