--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -724,3 +724,5 @@ CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA256_ARM=y
 PM_SYNC_BEFORE_SUSPEND=y
+SPEED_LEVEL_INTERFACE=y
+CONFIG_INTELLI_THERMAL_V2=y
