--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -3070,6 +3070,11 @@ config FORCE_FAST_CHARGE
 	 A simple sysfs interface to force adapters that
 	 are detected as USB to charge as AC.
 
+config SPEED_LEVEL_INTERFACE
+        bool "Expose SPEED level information in sys fs"
+        help
+         Allow SPEED level to be shown into specific kernel apps
+
 config KERNEL_TEXT_MPU_PROT
 	bool "Enable xpu protection of kernel r/o sections"
 	help
