intelli-thermal v2: initial adaptation
Intellithermal 2.0 is based on the latest Qualcomm thermal driver adapted for
in-kernel use and control.  Newer MSM8974+ chipsets should use this driver
going forward

Signed-off-by: Paul Reioux <reioux@gmail.com>

--- a/drivers/thermal/Kconfig
+++ b/drivers/thermal/Kconfig
@@ -130,3 +130,10 @@ config THERMAL_MONITOR_SIMPLE
 	  via a specified ADC channel on the VADC device, and limits the max frequency
 	  of the CPU cores accordingly. The code is simple, allows for up to 8 throttling
 	  steps, and is completely configurable via sysfs.
+
+config INTELLI_THERMAL_V2
+	bool "Better thermal monitor for MSM"
+	depends on THERMAL_TSENS8974
+	depends on CPU_FREQ_MSM
+	default n
+	help
