--- a/drivers/thermal/Makefile
+++ b/drivers/thermal/Makefile
@@ -13,3 +13,4 @@ obj-$(CONFIG_THERMAL_TSENS8974)	+= msm8974-tsens.o
 obj-$(CONFIG_THERMAL_QPNP)	+= qpnp-temp-alarm.o
 obj-$(CONFIG_THERMAL_QPNP_ADC_TM)	+= qpnp-adc-tm.o
 obj-$(CONFIG_THERMAL_MONITOR_SIMPLE)	+= msm_thermal_simple.o
+obj-$(CONFIG_INTELLI_THERMAL_V2)	+= msm_thermal_v2.o
