--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -135,7 +135,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMANDPLUS=y
 CONFIG_CPU_FREQ_GOV_INTELLIMM=y
 CONFIG_CPU_FREQ_GOV_YANKACTIVE=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
-CONFIG_CPU_BOOST=y
+# CONFIG_CPU_BOOST is not set
 CONFIG_CPU_IDLE=y
 CONFIG_VFP=y
 CONFIG_NEON=y
@@ -726,3 +726,4 @@ CONFIG_CRYPTO_SHA256_ARM=y
 PM_SYNC_BEFORE_SUSPEND=y
 SPEED_LEVEL_INTERFACE=y
 CONFIG_INTELLI_THERMAL_V2=y
+CONFIG_CPU_INPUT_BOOST=y
