char: introduce FRandom

--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -726,4 +726,4 @@ CONFIG_CRYPTO_SHA256_ARM=y
 PM_SYNC_BEFORE_SUSPEND=y
 SPEED_LEVEL_INTERFACE=y
 CONFIG_INTELLI_THERMAL_V2=y
-CONFIG_CPU_INPUT_BOOST=y
+CONFIG_FRANDOM=y
