Update zram and zsmalloc up-to 3.17 kernel changes
* Credits to @mikeNG

--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -709,8 +709,9 @@ CONFIG_CRYPTO_LZ4=y
 CONFIG_SWAP=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
 CONFIG_CGROUP_MEM_RES_CTLR_SWAP=y
+CONFIG_ZCACHE=y
 CONFIG_ZRAM=y
-CONFIG_QCACHE=y
+CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_ZSMALLOC=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_CONG_WESTWOOD=y
@@ -720,6 +721,8 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_ADRENO_IDLER=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_QCACHE=y
+CONFIG_POWERSUSPEND=y
 CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_CRYPTO_SHA256=y
 CONFIG_CRYPTO_SHA256_ARM=y
