--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1032,4 +1032,8 @@ config TOUCHSCREEN_DOUBLETAP2WAKE
 
 source "drivers/input/touchscreen/gt9xx/Kconfig"
 
+config STATE_NOTIFIER
+        bool "State Notifier"
+	default y
+
 endif
