msm: Add MSM hotplug driver
* Hotplugging enabled by default.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/arch/arm/configs/apollo_dttw_defconfig
+++ b/arch/arm/configs/apollo_dttw_defconfig
@@ -705,6 +705,7 @@ CONFIG_CRYPTO_DEV_QCEDEV=y
 
 #Apollo
 CONFIG_ALUCARD_HOTPLUG=y
+CONFIG_MSM_HOTPLUG=y
 CONFIG_CRYPTO_LZ4=y
 CONFIG_SWAP=y
 CONFIG_CGROUP_MEM_RES_CTLR=y
