--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -269,7 +269,7 @@ config CPU_FREQ_GOV_ONDEMAND
 	  module will be called cpufreq_ondemand.
 	  For details, take a look at linux/Documentation/cpu-freq.
 	  If in doubt, say N.
-onfig CPU_FREQ_GOV_BIOSHOCK
+config CPU_FREQ_GOV_BIOSHOCK
 	tristate "'bioshock' cpufreq bioshock"
 	depends on CPU_FREQ
 	help
